@@ -13,3 +13,5 @@
       - Updated: faster and more reliable loading of address delivery carriers;
         no more downloading of pickup points
       - Fixed: disabled pickup point change for address delivery in order administration
+      - Fixed: with a manually created pickup point order, an entry was not created in the list of Packetery orders
+        and it was not possible to set pickup point in the order detail
